--- a/styles.css
+++ b/styles.css
@@ -102,3 +102,56 @@ meter {
 
 /* CSS RESET ENDING */
 
+
+/* STYLING START */
+
+@import url('https://fonts.googleapis.com/css2?family=Lumanosimo&family=Tulpen+One&display=swap');
+
+body {
+    background-color: #000;
+    color: #fff;
+}
+
+.title-container {
+    text-align: center;
+    font-family: 'Tulpen One', cursive;
+}
+
+
+
+/* ANIMATIONS START */
+
+.galaxy-animation {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    height: 1px;
+    width: 1px;
+    background-color: #fff;
+    border-radius: 90%;
+    box-shadow: -24vw -44vh 2px 2px #fff,
+                38vw -4vh 0px 0px #fff,
+                -20vw -48vh 1px 2px #fff,
+                -39vw 38vh 3px 1px #fff,
+                -42vw -11vh 0px 3px #fff,
+                12vw 15vh 3px 3px #fff,
+                42vw 6vh 3px 2px #fff,
+                -8vw 9vh 0px 2px #fff,
+                34vw -38vh 1px 0px #fff,
+                -17vw 45vh 3px 1px #fff,
+                22vw -36vh 3px 2px #fff,
+                -42vw 1vh 1px 0px #fff;
+    animation: zoom 10s alternate infinite;
+}
+
+/* ANIMATIONS END */
+
+/* KEYFRAMES START */
+@keyframes zoom {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(1.5);
+    }
+}
