--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,10 +35,10 @@ a {
     padding-top: 20px;
 }
 
-.logo {
-    font-size: 1.5rem;
-    color: #000;
-    padding-left: 20px;
+.logo img {
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
 }
 
 .hamburger {
@@ -70,6 +70,10 @@ a {
 
 .nav__link a:hover {
     background-color: #84b3da;
+}
+
+.nav__link a:visited {
+    color: #fff;
 }
 
 .hide {
